--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "private": true,
-
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@stellar/stellar-sdk": "^13.1.0"
+  }
 }
